syntax = "proto3";
package metric.events;


message OpenEdit {}