syntax = "proto3";
package metric.events;


message UpdateFlipperStart {
  string update_from = 1;
  string update_to = 2;
  int64 update_id = 3;
}